--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -25,6 +25,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
+  font-family: Arial;
+  font-size: 13.3333px;
 }
 ol, ul {
   list-style: none;
