--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -15,7 +15,6 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -25,7 +24,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
-  font-family: 'Roboto', Helvetica , PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
+  font-family: Roboto, Helvetica , PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
   color:#222222;
   font-size: 13.3333px;
 }
