--- a/src/lib/init-css/reset.css
+++ b/src/lib/init-css/reset.css
@@ -22,6 +22,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
+*{
+      box-sizing: border-box;
+}
 body {
   line-height: 1;
   font-family: Roboto, Helvetica , PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
