--- a/src/lib/theme-default/index.css
+++ b/src/lib/theme-default/index.css
@@ -1,4 +1,16 @@
+/*
+ *
+ *  全局公用样式
+ * 
+ */
+@import './animationStyle.css';
+@import './theme-color.css';
 
+.clearfix:after{
+  clear:both;
+  display: block;
+  content:'';
+}
 .gl-col-1,
 .gl-col-10,
 .gl-col-11,
@@ -35,28 +47,12 @@
     margin-left: 4.16667%
 }
 
-.gl-col-pull-1 {
-    right: 4.16667%
-}
-
-.gl-col-push-1 {
-    left: 4.16667%
-}
-
 .gl-col-2 {
     width: 8.33333%
 }
 
 .gl-col-offset-2 {
     margin-left: 8.33333%
-}
-
-.gl-col-pull-2 {
-    right: 8.33333%
-}
-
-.gl-col-push-2 {
-    left: 8.33333%
 }
 
 .gl-col-3 {
@@ -67,28 +63,12 @@
     margin-left: 12.5%
 }
 
-.gl-col-pull-3 {
-    right: 12.5%
-}
-
-.gl-col-push-3 {
-    left: 12.5%
-}
-
 .gl-col-4 {
     width: 16.66667%
 }
 
 .gl-col-offset-4 {
     margin-left: 16.66667%
-}
-
-.gl-col-pull-4 {
-    right: 16.66667%
-}
-
-.gl-col-push-4 {
-    left: 16.66667%
 }
 
 .gl-col-5 {
@@ -99,28 +79,12 @@
     margin-left: 20.83333%
 }
 
-.gl-col-pull-5 {
-    right: 20.83333%
-}
-
-.gl-col-push-5 {
-    left: 20.83333%
-}
-
 .gl-col-6 {
     width: 25%
 }
 
 .gl-col-offset-6 {
     margin-left: 25%
-}
-
-.gl-col-pull-6 {
-    right: 25%
-}
-
-.gl-col-push-6 {
-    left: 25%
 }
 
 .gl-col-7 {
@@ -131,28 +95,12 @@
     margin-left: 29.16667%
 }
 
-.gl-col-pull-7 {
-    right: 29.16667%
-}
-
-.gl-col-push-7 {
-    left: 29.16667%
-}
-
 .gl-col-8 {
     width: 33.33333%
 }
 
 .gl-col-offset-8 {
     margin-left: 33.33333%
-}
-
-.gl-col-pull-8 {
-    right: 33.33333%
-}
-
-.gl-col-push-8 {
-    left: 33.33333%
 }
 
 .gl-col-9 {
@@ -163,28 +111,12 @@
     margin-left: 37.5%
 }
 
-.gl-col-pull-9 {
-    right: 37.5%
-}
-
-.gl-col-push-9 {
-    left: 37.5%
-}
-
 .gl-col-10 {
     width: 41.66667%
 }
 
 .gl-col-offset-10 {
     margin-left: 41.66667%
-}
-
-.gl-col-pull-10 {
-    right: 41.66667%
-}
-
-.gl-col-push-10 {
-    left: 41.66667%
 }
 
 .gl-col-11 {
@@ -195,14 +127,6 @@
     margin-left: 45.83333%
 }
 
-.gl-col-pull-11 {
-    right: 45.83333%
-}
-
-.gl-col-push-11 {
-    left: 45.83333%
-}
-
 .gl-col-12 {
     width: 50%
 }
@@ -211,14 +135,6 @@
     margin-left: 50%
 }
 
-.gl-col-pull-12 {
-    right: 50%
-}
-
-.gl-col-push-12 {
-    position: relative;
-    left: 50%
-}
 
 .gl-col-13 {
     width: 54.16667%
@@ -226,14 +142,6 @@
 
 .gl-col-offset-13 {
     margin-left: 54.16667%
-}
-
-.gl-col-pull-13 {
-    right: 54.16667%
-}
-
-.gl-col-push-13 {
-    left: 54.16667%
 }
 
 .gl-col-14 {
@@ -244,28 +152,12 @@
     margin-left: 58.33333%
 }
 
-.gl-col-pull-14 {
-    right: 58.33333%
-}
-
-.gl-col-push-14 {
-    left: 58.33333%
-}
-
 .gl-col-15 {
     width: 62.5%
 }
 
 .gl-col-offset-15 {
     margin-left: 62.5%
-}
-
-.gl-col-pull-15 {
-    right: 62.5%
-}
-
-.gl-col-push-15 {
-    left: 62.5%
 }
 
 .gl-col-16 {
@@ -276,28 +168,12 @@
     margin-left: 66.66667%
 }
 
-.gl-col-pull-16 {
-    right: 66.66667%
-}
-
-.gl-col-push-16 {
-    left: 66.66667%
-}
-
 .gl-col-17 {
     width: 70.83333%
 }
 
 .gl-col-offset-17 {
     margin-left: 70.83333%
-}
-
-.gl-col-pull-17 {
-    right: 70.83333%
-}
-
-.gl-col-push-17 {
-    left: 70.83333%
 }
 
 .gl-col-18 {
@@ -308,28 +184,12 @@
     margin-left: 75%
 }
 
-.gl-col-pull-18 {
-    right: 75%
-}
-
-.gl-col-push-18 {
-    left: 75%
-}
-
 .gl-col-19 {
     width: 79.16667%
 }
 
 .gl-col-offset-19 {
     margin-left: 79.16667%
-}
-
-.gl-col-pull-19 {
-    right: 79.16667%
-}
-
-.gl-col-push-19 {
-    left: 79.16667%
 }
 
 .gl-col-20 {
@@ -340,28 +200,12 @@
     margin-left: 83.33333%
 }
 
-.gl-col-pull-20 {
-    right: 83.33333%
-}
-
-.gl-col-push-20 {
-    left: 83.33333%
-}
-
 .gl-col-21 {
     width: 87.5%
 }
 
 .gl-col-offset-21 {
     margin-left: 87.5%
-}
-
-.gl-col-pull-21 {
-    right: 87.5%
-}
-
-.gl-col-push-21 {
-    left: 87.5%
 }
 
 .gl-col-22 {
@@ -372,28 +216,12 @@
     margin-left: 91.66667%
 }
 
-.gl-col-pull-22 {
-    right: 91.66667%
-}
-
-.gl-col-push-22 {
-    left: 91.66667%
-}
-
 .gl-col-23 {
     width: 95.83333%
 }
 
 .gl-col-offset-23 {
     margin-left: 95.83333%
-}
-
-.gl-col-pull-23 {
-    right: 95.83333%
-}
-
-.gl-col-push-23 {
-    left: 95.83333%
 }
 
 .gl-col-24 {
@@ -403,11 +231,58 @@
 .gl-col-offset-24 {
     margin-left: 100%
 }
-
-.gl-col-pull-24 {
-    right: 100%
+/*
+    *
+    *字体大小
+    *
+*/
+.gl-size-12 {
+    font-size: 12px
 }
 
-.gl-col-push-24 {
-    left: 100%
+.gl-size-14 {
+    font-size: 14px
 }
+
+.gl-size-16 {
+    font-size: 16px
+}
+
+.gl-size-18 {
+    font-size: 18px
+}
+
+.gl-size-22 {
+    font-size: 22px
+}
+
+.gl-size-24 {
+    font-size: 24px
+}
+
+.gl-size-26 {
+    font-size: 26px
+}
+
+.gl-size-28 {
+    font-size: 28px
+}
+
+.gl-size-30 {
+    font-size: 30px
+}
+
+.gl-size-32 {
+    font-size: 32px
+}
+
+.gl-size-34 {
+    font-size: 34px
+}
+
+/*
+    *
+    * 
+    *
+*/
+
