--- a/src/lib/theme-default/index.css
+++ b/src/lib/theme-default/index.css
@@ -3,8 +3,24 @@
  *  全局公用样式
  * 
  */
+
 @import './animationStyle.css';
 @import './theme-color.css';
+
+@font-face {
+  font-family: 'Gotham-Book';
+  src: url('../../../static/font/Gotham-Book.eot?#iefix') format('embedded-opentype'),  url('../../../static/font/Gotham-Book.otf')  format('opentype'),
+         url('../../../static/font/Gotham-Book.woff') format('woff'), url('../../../static/font/Gotham-Book.ttf')  format('truetype'), url('../../../static/font/Gotham-Book.svg#Gotham-Book') format('svg');
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gotham-Bold';
+  src: url('../../../static/font/Gotham-Bold.eot?#iefix') format('embedded-opentype'),  url('../../../static/font/Gotham-Bold.otf')  format('opentype'),
+         url('../../../static/font/Gotham-Bold.woff') format('woff'), url('../../../static/font/Gotham-Bold.ttf')  format('truetype'), url('../../../static/font/Gotham-Bold.svg#Gotham-Bold') format('svg');
+  font-weight: 900;
+  font-style: normal;
+}
 
 .clearfix:after{
   clear:both;
@@ -281,6 +297,10 @@
 .gl-size-34 {
     font-size: 34px
 }
+
+.gl-fb {
+     font-family: 'Gotham-Bold', PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
+} 
 
 /*
     *
