修改提交页

--- a/src/lib/theme-default/index.css
+++ b/src/lib/theme-default/index.css
@@ -300,6 +300,9 @@
 
 .gl-fb {
      font-family: 'Gotham-Bold', PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
+}
+.gl-fn {
+     font-family: 'Gotham-Book', PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
 } 
 
 /*
