--- a/src/lib/theme-default/animationStyle.css
+++ b/src/lib/theme-default/animationStyle.css
@@ -6,20 +6,22 @@
   *     
  */
 
-.list-complete-item {
-  transition: all 1s;
-  display: inline-block;
-  margin-right: 10px;
-}
-.list-complete-enter {
-  opacity: 0;
-  transform: translateY(-50%);
-}
-.list-complete-leave-active{
-  opacity: 0;
-  transform: translateY(50%);
-  position: absolute;
-}
+/*
+*.list-complete-item {
+* transition: all 1s;
+* display: inline-block;
+* margin-right: 10px;
+*}
+*.list-complete-enter {
+*  opacity: 0;
+*  transform: translateY(-50%);
+*}
+*.list-complete-leave-active{
+*  opacity: 0;
+*  transform: translateY(50%);
+*  position: absolute;
+*}
+*/
 
 /*
   *
