--- a/src/lib/theme-default/animationStyle.css
+++ b/src/lib/theme-default/animationStyle.css
@@ -6,6 +6,19 @@
   *     
  */
 
+.uploadsuccess-item{
+  display:inline-block;
+  transition: all 0.6s;
+}
+
+.uploadsuccess-leave-active, .uploadsuccess-enter {
+  opacity: 0;
+  height: 0px!important;
+  padding: 0px !important;
+}
+.uploadsuccess-leave-active, .uploadsuccess-enter-active {
+  transition: all 2s;
+}
 /*
 *.list-complete-item {
 * transition: all 1s;
@@ -90,5 +103,4 @@
 .loginlogon-enter, .loginlogon-leave-active {
   opacity: 0
 }
-
 
