--- a/src/lib/theme-default/theme-color.css
+++ b/src/lib/theme-default/theme-color.css
@@ -34,6 +34,10 @@
   background-color:#EDEDED;
 }
 
+.gl-bgcolor-gray-bb {
+  background-color:#bbb;
+}
+
 .gl-bgcolor-gray-dc {
   background-color:#DCDCDC;
 }
