--- a/src/lib/theme-default/index.css
+++ b/src/lib/theme-default/index.css
@@ -310,6 +310,9 @@ body {
 .gl-fn {
      font-family: 'Gotham-Book', PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
 } 
+.gl-nr {
+     font-family: 'Gotham', PingFang SC,Source Sans Pro,Segoe UI,Heiti SC,Microsoft Yahei, sans-serif;
+} 
 
 /*
     *
