--- a/src/lib/theme-default/animationStyle.css
+++ b/src/lib/theme-default/animationStyle.css
@@ -127,3 +127,25 @@
   opacity: 0
 }
 
+
+ @keyframes animateds_start {
+  from {
+    transform: translateY(0px);
+    box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.15);
+  }
+  to {
+    transform: translateY(-8px);
+    box-shadow: 0px 9px 18px 0px rgba(0,0,0,0.2);
+  }
+ }
+
+ @keyframes animateds_end {
+  from {
+    transform: translateY(-8px);
+    box-shadow: 0px 9px 18px 0px rgba(0,0,0,0.2);
+  }
+  to {
+    transform: translateY(0px);
+    box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.15);
+  }
+ }
