--- a/src/lib/theme-default/animationStyle.css
+++ b/src/lib/theme-default/animationStyle.css
@@ -106,7 +106,16 @@
     transform: translate3d(350px, 0, 0);
   }
 }
-
+.appCollectionFade-enter-active {
+  opacity: 1;
+ 
+}
+.appCollectionFade-leave-active{
+  opacity: 0;
+}
+.appCollectionFade-enter-active, .appCollectionFade-leave-active {
+ transition: opacity 0.5;
+}
 
 /*
   *
