--- a/src/lib/theme-default/index.css
+++ b/src/lib/theme-default/index.css
@@ -28,6 +28,10 @@
   content:'';
 }
 
+input:-webkit-autofill {
+     -webkit-box-shadow: 0 0 0px 1000px #EDEDED inset;
+}
+
 body {
     min-width: 1000px;
     background-color: #fefefe;
