--- a/src/lib/theme-default/animationStyle.css
+++ b/src/lib/theme-default/animationStyle.css
@@ -249,19 +249,24 @@
 }
 */
 .animated.cardAnimations {
-  -webkit-animation-duration: 0.35s;
-  animation-duration: 0.35s;
+  -webkit-animation-duration: 0.4s;
+  animation-duration: 0.4s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
 @-webkit-keyframes cardAnimationsIn {
   from {
-    -webkit-transform: scale(0.75) translateY(50px);
-    transform: scale(0.75) translateY(50px);
+    -webkit-transform: scale(0.75) translateY(60px);
+    transform: scale(0.75) translateY(60px);
     opacity:0;
+    animation-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   }
-
+  75% {
+    -webkit-transform: scale(1.02) translateY(0px);
+    transform: scale(1.02) translateY(0px);
+    opacity:1;
+  }
   to {
     -webkit-transform: scale(1) translateY(0px);
     transform: scale(1) translateY(0px);
@@ -271,11 +276,16 @@
 
 @keyframes cardAnimationsIn {
   from {
-    -webkit-transform: scale(0.75) translateY(50px);
-    transform: scale(0.75) translateY(50px);
+    -webkit-transform: scale(0.75) translateY(60px);
+    transform: scale(0.75) translateY(60px);
     opacity:0;
+    animation-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
   }
-
+  75% {
+    -webkit-transform: scale(1.02) translateY(0px);
+    transform: scale(1.02) translateY(0px);
+    opacity:1;
+  }
   to {
     -webkit-transform: scale(1) translateY(0px);
     transform: scale(1) translateY(0px);
@@ -296,8 +306,8 @@
   }
 
   to {
-    -webkit-transform: scale(0.75) translateY(50px);
-    transform: scale(0.75) translateY(50px);
+    -webkit-transform: scale(0.75) translateY(60px);
+    transform: scale(0.75) translateY(60px);
     opacity:0;
   }
 }
@@ -310,8 +320,8 @@
   }
 
   to {
-    -webkit-transform: scale(0.75) translateY(50px);
-    transform: scale(0.75) translateY(50px);
+    -webkit-transform: scale(0.75) translateY(60px);
+    transform: scale(0.75) translateY(60px);
     opacity:0;
   }
 }
